user theses page and graduation assistant page
